--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
             <h2>Pricing</h2>
             <p>
               Elige entre distintos paquetes especiales que otorgan ventajas
-              únicas para tus misiones en los Huecos.
+              únicas para tus misiones en las cavidades.
             </p>
           </div>
 
@@ -1025,52 +1025,53 @@
             <div class="col-lg-4 col-md-6">
               <div class="box" data-aos="zoom-in" data-aos-delay="100">
                 <h3>SUSCRIPCION PROXY</h3>
-                <h4><sup>$</sup>5<span> / month</span></h4>
+                <h4><sup>€</sup>5<span> / mensual</span></h4>
                 <ul>
+                  <span class="recommended-badge">Recommended</span>
                   <li>Obten las siguientes recompensas:</li>
-                  <li>300 Monochromes</li>
+                  <li>300 Fotogramas</li>
                   <li>Durante los siguientes 30 dias, tambien obtendras:</li>
-                  <li>90 Polichromes<br></li>
-                  <li>300 Prioridad en servidores completos</li>
+                  <li>90 Peliculas<br></li>
+                  <li>Prioridad en servidores completos</li>
                   <li class="na">limitador de obtencion de monedas</li>
                 </ul>
                 <div class="btn-wrap">
-                  <a href="#" class="btn-buy">Buy Now</a>
+                  <a href="#" class="btn-buy">COMPRA AHORA</a>
                 </div>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
               <div class="box recommended" data-aos="zoom-in">
-                <span class="recommended-badge">Recommended</span>
-                <h3>Paquete Invitacion exclusiva</h3>
-                <h4><sup>$</sup>19<span> / month</span></h4>
+                <h3>PAQUETE DE INVITACION EXCLUSIVA</h3>
+                <h4><sup>€</sup>16<span></span></h4>
                 <ul>
-                  <li>Aida dere</li>
-                  <li>Nec feugiat nisl</li>
-                  <li>Nulla at volutpat dola</li>
-                  <li>Pharetra massa</li>
-                  <li class="na">Massa ultricies mi</li>
+                  <li>Obten las siguientes recompensas:</li>
+                  <li>10 Cintas Cifradas</li>
+                  <li>100000 Deniques</li>
+                  <li>1 W - Engine</li>
+                  <li class="na">limitador de obtencion de monedas</li>
                 </ul>
                 <div class="btn-wrap">
-                  <a href="#" class="btn-buy">Buy Now</a>
+                  <a href="#" class="btn-buy">COMPRA AHORA</a>
                 </div>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
               <div class="box" data-aos="zoom-in" data-aos-delay="100">
-                <h3>Developer</h3>
-                <h4><sup>$</sup>29<span> / month</span></h4>
+                <span class="recommended-badge">Recommended</span>
+                <h3>CUPON SORPRESA</h3>
+                <h4><sup>€</sup>4<span> / semanal</span></h4>
                 <ul>
-                  <li>Aida dere</li>
-                  <li>Nec feugiat nisl</li>
-                  <li>Nulla at volutpat dola</li>
+                  <li>Obten las siguientes recompensas:</li>
+                  <li>240 Fotogramas</li>
+                  <li>760 Peliculas</li>
                   <li>Pharetra massa</li>
-                  <li>Massa ultricies mi</li>
+                  <li class="na">limitador de obtencion de monedas</li>
                 </ul>
                 <div class="btn-wrap">
-                  <a href="#" class="btn-buy">Buy Now</a>
+                  <a href="#" class="btn-buy">COMPRA AHORA</a>
                 </div>
               </div>
             </div>
@@ -1084,6 +1085,7 @@
         <div class="container">
           <div class="section-title" data-aos="fade-up">
             <h2>Frequently Asked Questions</h2>
+            <h4>Resuelve tus dudas más comunes sobre el juego y sus mecánicas.</h4>
           </div>
 
           <ul class="faq-list">
@@ -1092,15 +1094,13 @@
                 data-bs-toggle="collapse"
                 class="collapsed"
                 data-bs-target="#faq1"
-                >Non consectetur a erat nam at lectus urna duis?
+                >Caules son las monedas del juego?
                 <i class="bx bx-chevron-down icon-show"></i
                 ><i class="bx bx-x icon-close"></i
               ></a>
               <div id="faq1" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id
-                  volutpat lacus laoreet non curabitur gravida. Venenatis lectus
-                  magna fringilla urna porttitor rhoncus dolor purus non.
+                  Las monedas del juego son los Polichromes, y los Monochromes, su uso es para poder comprar cintas las cuales sirven para obtener un personaje.
                 </p>
               </div>
             </li>
@@ -1110,17 +1110,12 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#faq2"
                 class="collapsed"
-                >Feugiat scelerisque varius morbi enim nunc faucibus a
-                pellentesque? <i class="bx bx-chevron-down icon-show"></i
+                >¿Cómo consigo Películas (Cintas Cifradas)? <i class="bx bx-chevron-down icon-show"></i
                 ><i class="bx bx-x icon-close"></i
               ></a>
               <div id="faq2" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque
-                  habitant morbi. Id interdum velit laoreet id donec ultrices.
-                  Fringilla phasellus faucibus scelerisque eleifend donec
-                  pretium. Est pellentesque elit ullamcorper dignissim. Mauris
-                  ultrices eros in cursus turpis massa tincidunt dui.
+                  Las obtienes comprándolas con Monochrome o Polychrome, completando misiones, logros o mediante eventos especiales.
                 </p>
               </div>
             </li>
@@ -1130,18 +1125,12 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#faq3"
                 class="collapsed"
-                >Dolor sit amet consectetur adipiscing elit pellentesque
-                habitant morbi? <i class="bx bx-chevron-down icon-show"></i
+                >¿Cuál es la diferencia entre cintas multicolor (cintas cifradas) y las grises (cintas originales)? <i class="bx bx-chevron-down icon-show"></i
                 ><i class="bx bx-x icon-close"></i
               ></a>
               <div id="faq3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Eleifend mi in nulla posuere sollicitudin aliquam ultrices
-                  sagittis orci. Faucibus pulvinar elementum integer enim. Sem
-                  nulla pharetra diam sit amet nisl suscipit. Rutrum tellus
-                  pellentesque eu tincidunt. Lectus urna duis convallis
-                  convallis tellus. Urna molestie at elementum eu facilisis sed
-                  odio morbi quis
+                Las cintas multicolor (cintas cifradas) se usan en banners de evento. Las grises (cintas originales) se usan en el banner estándar.
                 </p>
               </div>
             </li>
@@ -1151,17 +1140,13 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#faq4"
                 class="collapsed"
-                >Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?
+                >A parte de personajes, puedo obtener algo mas en los banners?
                 <i class="bx bx-chevron-down icon-show"></i
                 ><i class="bx bx-x icon-close"></i
               ></a>
               <div id="faq4" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Dolor sit amet consectetur adipiscing elit pellentesque
-                  habitant morbi. Id interdum velit laoreet id donec ultrices.
-                  Fringilla phasellus faucibus scelerisque eleifend donec
-                  pretium. Est pellentesque elit ullamcorper dignissim. Mauris
-                  ultrices eros in cursus turpis massa tincidunt dui.
+                  Si, tambien podras obtener las W - Engines, que son las armas que pueden usar los personajes, cada una tiene sus propias características y su elemento.
                 </p>
               </div>
             </li>
@@ -1171,16 +1156,12 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#faq5"
                 class="collapsed"
-                >Tempus quam pellentesque nec nam aliquam sem et tortor
-                consequat? <i class="bx bx-chevron-down icon-show"></i
+                >Hay algun tipo de decoracion para mis personajes? <i class="bx bx-chevron-down icon-show"></i
                 ><i class="bx bx-x icon-close"></i
               ></a>
               <div id="faq5" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Molestie a iaculis at erat pellentesque adipiscing commodo.
-                  Dignissim suspendisse in est ante in. Nunc vel risus commodo
-                  viverra maecenas accumsan. Sit amet nisl suscipit adipiscing
-                  bibendum est. Purus gravida quis blandit turpis cursus in
+                 Si, mediante eventos podras conseguir trajes unicos para tus personajes, los cuales son solo esteticos, tambien cambiando algunas animaciones de estos.
                 </p>
               </div>
             </li>
@@ -1190,20 +1171,13 @@
                 data-bs-toggle="collapse"
                 data-bs-target="#faq6"
                 class="collapsed"
-                >Tortor vitae purus faucibus ornare. Varius vel pharetra vel
-                turpis nunc eget lorem dolor?
+                >Como puedo subir de nivel de forma rapida?
                 <i class="bx bx-chevron-down icon-show"></i
                 ><i class="bx bx-x icon-close"></i
               ></a>
               <div id="faq6" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris
-                  vitae ultricies leo integer malesuada nunc vel. Tincidunt eget
-                  nullam non nisi est sit amet. Turpis nunc eget lorem dolor
-                  sed. Ut venenatis tellus in metus vulputate eu scelerisque.
-                  Pellentesque diam volutpat commodo sed egestas egestas
-                  fringilla phasellus faucibus. Nibh tellus molestie nunc non
-                  blandit massa enim nec.
+                  Para subir de nivel de forma rapida tan solo debes centrarte en las misiones principales, eso si, una vez llegue al limitador de nivel por mundo, deberas completar un desafio el cual te dejara seguir aumentando tu nivel hasta que llegues a 60
                 </p>
               </div>
             </li>
