--- a/index.html
+++ b/index.html
@@ -92,27 +92,6 @@
             <li><a class="nav-link scrollto" href="#team">Equipo</a></li>
             <li><a class="nav-link scrollto" href="#pricing">Precio</a></li>
             <li class="dropdown">
-              <a href="#"
-                ><span>Información</span> <i class="bi bi-chevron-down"></i
-              ></a>
-              <ul>
-                <li><a href="#">Estadísticas</a></li>
-                <li class="dropdown">
-                  <a href="#"
-                    ><span>Personajes</span> <i class="bi bi-chevron-right"></i
-                  ></a>
-                  <ul>
-                    <li><a href="#">Físico</a></li>
-                    <li><a href="#">Fuego</a></li>
-                    <li><a href="#">Eléctrico</a></li>
-                    <li><a href="#">Hielo</a></li>
-                    <li><a href="#">Éter</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">W-Engine</a></li>
-                <li><a href="#">Discos</a></li>
-                <li><a href="#">Rastros</a></li>
-              </ul>
             </li>
             <li>
               <a class="nav-link scrollto" href="#contact">Descargar ZZZ</a>
@@ -137,13 +116,13 @@
           <div class="row">
             <div class="col-lg-6" data-aos="fade-right">
               <div class="image">
-                <img src="assets/img/about.jpg" class="img-fluid" alt="" />
+                <img src="assets/img/Zenless Portada.jpg" class="img-fluid" alt="" />
               </div>
             </div>
             <div class="col-lg-6" data-aos="fade-left">
               <div class="content pt-4 pt-lg-0 pl-0 pl-lg-3">
                 <h3>
-                  Zenless Zone Zero es un videojuego Beat'em up hecho por
+                  Zenless Zone Zero es un videojuego Slasher hecho por
                   Hoyoverse.
                 </h3>
                 <p class="fst-italic">
@@ -239,7 +218,7 @@
             </div>
             <div
               class="image col-lg-6 order-1 order-lg-2"
-              style="background-image: url('assets/img/services.jpg')"
+              style="background-image: url('assets/img/Random_Play.png')"
               data-aos="fade-left"
               data-aos-delay="100"
             ></div>
@@ -257,7 +236,7 @@
                 <div class="tab-pane active show" id="tab-1">
                   <figure>
                     <img
-                      src="assets/img/featured-1.png"
+                      src="assets/img/HIA_Club.png"
                       alt=""
                       class="img-fluid"
                     />
@@ -266,7 +245,7 @@
                 <div class="tab-pane" id="tab-2">
                   <figure>
                     <img
-                      src="assets/img/featured-2.png"
+                      src="assets/img/Scott_Outpost.png"
                       alt=""
                       class="img-fluid"
                     />
@@ -275,7 +254,7 @@
                 <div class="tab-pane" id="tab-3">
                   <figure>
                     <img
-                      src="assets/img/featured-3.png"
+                      src="assets/img/Ceceria.jpg"
                       alt=""
                       class="img-fluid"
                     />
@@ -284,7 +263,7 @@
                 <div class="tab-pane" id="tab-4">
                   <figure>
                     <img
-                      src="assets/img/featured-4.png"
+                      src="assets/img/Port_Elpis_Overview.png"
                       alt=""
                       class="img-fluid"
                     />
@@ -481,19 +460,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-1.jpg"
+                  src="assets/img/portfolio/Gameplay1.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>App 1</h4>
-                  <p>App</p>
+                  <h4>Gameplay de misiones</h4>
+                  <p>GAMEPLAY</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-1.jpg"
+                      href="assets/img/portfolio/Gameplay1.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="App 1"
+                      title="Gameplay de misiones de Proxy"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a href="portfolio-details.html" title="More Details"
@@ -507,19 +486,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-2.jpg"
+                  src="assets/img/portfolio/Personajes.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Web 3</h4>
-                  <p>Web</p>
+                  <h4>Interfaz de Personajes</h4>
+                  <p>INTERFAZ</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-2.jpg"
+                      href="assets/img/portfolio/Personajes.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="Web 3"
+                      title="La interfaz para subir de nivel a tus personajes"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a href="portfolio-details.html" title="More Details"
@@ -533,19 +512,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-3.jpg"
+                  src="assets/img/portfolio/Gameplay2.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>App 2</h4>
-                  <p>App</p>
+                  <h4>Defensa de objetivos</h4>
+                  <p>GAMEPLAY</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-3.jpg"
+                      href="assets/img/portfolio/Gameplay2.png"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="App 2"
+                      title="Defensa de objetivos que recopilan información"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a href="portfolio-details.html" title="More Details"
@@ -559,19 +538,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-4.jpg"
+                  src="assets/img/portfolio/Corin.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Card 2</h4>
-                  <p>Card</p>
+                  <h4>Corin Wickes</h4>
+                  <p>PERSONAJES</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-4.jpg"
+                      href="assets/img/portfolio/Corin.png"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="Card 2"
+                      title="Corin Wickes, empleada de Servicios Domésticos Victoria"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a href="portfolio-details.html" title="More Details"
@@ -585,19 +564,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-5.jpg"
+                  src="assets/img/portfolio/WEngine.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Web 2</h4>
-                  <p>Web</p>
+                  <h4>Interfaz de Amplificadores</h4>
+                  <p>INTERFAZ</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-5.jpg"
+                      href="assets/img/portfolio/WEngine.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="Web 2"
+                      title="Interfaz para mejorar o cambiar los Amplificadores (W-Engines) de los agentes"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a href="portfolio-details.html" title="More Details"
@@ -611,19 +590,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-6.jpg"
+                  src="assets/img/portfolio/Gameplay3.jpg"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>App 3</h4>
-                  <p>App</p>
+                  <h4>Gameplay de Miyabi</h4>
+                  <p>GAMEPLAY</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-6.jpg"
+                      href="assets/img/portfolio/Gameplay3.jpg"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="App 3"
+                      title="Gameplay de Hoshimi Miyabi, de la Divisón 6"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a href="portfolio-details.html" title="More Details"
@@ -637,19 +616,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-7.jpg"
+                  src="assets/img/portfolio/Burnice.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Card 1</h4>
-                  <p>Card</p>
+                  <h4>Burnice White</h4>
+                  <p>PERSONAJES</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-7.jpg"
+                      href="assets/img/portfolio/Burnice.png"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="Card 1"
+                      title="Burnice White, miembro de los Hijos de Calidón"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a href="portfolio-details.html" title="More Details"
@@ -663,19 +642,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-card">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-8.jpg"
+                  src="assets/img/portfolio/Jane.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Card 3</h4>
-                  <p>Card</p>
+                  <h4>Jane Doe</h4>
+                  <p>PERSONAJES</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-8.jpg"
+                      href="assets/img/portfolio/Jane.png"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="Card 3"
+                      title="Jane Doe, miembro de operaciones en cubierto de New Eridu Public Security (N.E.P.S)"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a href="portfolio-details.html" title="More Details"
@@ -689,19 +668,19 @@
             <div class="col-lg-4 col-md-6 portfolio-item filter-web">
               <div class="portfolio-wrap">
                 <img
-                  src="assets/img/portfolio/portfolio-9.jpg"
+                  src="assets/img/portfolio/Batalla.png"
                   class="img-fluid"
                   alt=""
                 />
                 <div class="portfolio-info">
-                  <h4>Web 3</h4>
-                  <p>Web</p>
+                  <h4>Interfaz de Batalla</h4>
+                  <p>INTERFAZ</p>
                   <div class="portfolio-links">
                     <a
-                      href="assets/img/portfolio/portfolio-9.jpg"
+                      href="assets/img/portfolio/Batalla.png"
                       data-gallery="portfolioGallery"
                       class="portfolio-lightbox"
-                      title="Web 3"
+                      title="La interfaz de batalla que hay durante las misiones"
                       ><i class="bx bx-plus"></i
                     ></a>
                     <a href="portfolio-details.html" title="More Details"
@@ -716,7 +695,7 @@
       </section>
       <!-- End Portfolio Section -->
 
-      <!-- ======= Testimonials Section ======= -->
+<!-- ======= Testimonials Section ======= -->
       <section id="testimonials" class="testimonials">
         <div class="container" data-aos="zoom-in">
           <div class="quote-icon">
@@ -740,7 +719,7 @@
                     pie.
                   </p>
                   <img
-                    src="assets/img/testimonials/testimonials-1.jpg"
+                    src="assets/img/testimonials/Yanagi.png"
                     class="testimonial-img"
                     alt=""
                   />
@@ -760,7 +739,7 @@
                     las órdenes.
                   </p>
                   <img
-                    src="assets/img/testimonials/testimonials-2.jpg"
+                    src="assets/img/testimonials/Miyabi.png"
                     class="testimonial-img"
                     alt=""
                   />
@@ -781,7 +760,7 @@
                     desinteresado.
                   </p>
                   <img
-                    src="assets/img/testimonials/testimonials-3.jpg"
+                    src="assets/img/testimonials/Harumasa.png"
                     class="testimonial-img"
                     alt=""
                   />
@@ -802,7 +781,7 @@
                     equipo.
                   </p>
                   <img
-                    src="assets/img/testimonials/testimonials-4.jpg"
+                    src="assets/img/testimonials/Soukaku.png"
                     class="testimonial-img"
                     alt=""
                   />
@@ -812,19 +791,6 @@
               </div>
               <!-- End testimonial item -->
 
-              <div class="swiper-slide">
-                <div class="testimonial-item">
-                  <p>A CAMBIAR O ELIMINAR</p>
-                  <img
-                    src="assets/img/testimonials/testimonials-5.jpg"
-                    class="testimonial-img"
-                    alt=""
-                  />
-                  <h3>????</h3>
-                  <h4>Entrepreneur</h4>
-                </div>
-              </div>
-              <!-- End testimonial item -->
             </div>
             <div class="swiper-pagination"></div>
           </div>
@@ -838,7 +804,7 @@
           <div class="row">
             <div class="col-lg-2 col-md-4 col-6" data-aos="zoom-in">
               <img
-                src="assets/img/clients/client-1.png"
+                src="assets/img/clients/Cunning.png"
                 class="img-fluid"
                 alt=""
               />
@@ -850,7 +816,7 @@
               data-aos-delay="100"
             >
               <img
-                src="assets/img/clients/client-2.png"
+                src="assets/img/clients/Belobog.png"
                 class="img-fluid"
                 alt=""
               />
@@ -862,7 +828,7 @@
               data-aos-delay="200"
             >
               <img
-                src="assets/img/clients/client-3.png"
+                src="assets/img/clients/Victoria.png"
                 class="img-fluid"
                 alt=""
               />
@@ -874,7 +840,7 @@
               data-aos-delay="300"
             >
               <img
-                src="assets/img/clients/client-4.png"
+                src="assets/img/clients/NEPS.png"
                 class="img-fluid"
                 alt=""
               />
@@ -886,7 +852,7 @@
               data-aos-delay="400"
             >
               <img
-                src="assets/img/clients/client-5.png"
+                src="assets/img/clients/Calydon.png"
                 class="img-fluid"
                 alt=""
               />
@@ -898,7 +864,65 @@
               data-aos-delay="500"
             >
               <img
-                src="assets/img/clients/client-6.png"
+                src="assets/img/clients/Divisionwebp.png"
+                class="img-fluid"
+                alt=""
+              />
+            </div>
+
+            <div
+              class="col-lg-2 col-md-4 col-6"
+              data-aos="zoom-in"
+              data-aos-delay="500"
+            >
+              <img
+                src="assets/img/clients/Mockingbird.png"
+                class="img-fluid"
+                alt=""
+              />
+            </div>
+
+            <div
+              class="col-lg-2 col-md-4 col-6"
+              data-aos="zoom-in"
+              data-aos-delay="500"
+            >
+              <img
+                src="assets/img/clients/Obolo.png"
+                class="img-fluid"
+                alt=""
+              />
+            </div>
+            <div
+              class="col-lg-2 col-md-4 col-6"
+              data-aos="zoom-in"
+              data-aos-delay="500"
+            >
+              <img
+                src="assets/img/clients/Lyra.png"
+                class="img-fluid"
+                alt=""
+              />
+            </div>
+
+            <div
+              class="col-lg-2 col-md-4 col-6"
+              data-aos="zoom-in"
+              data-aos-delay="500"
+            >
+              <img
+                src="assets/img/clients/Silver.png"
+                class="img-fluid"
+                alt=""
+              />
+            </div>
+            <div
+              class="col-lg-2 col-md-4 col-6"
+              data-aos="zoom-in"
+              data-aos-delay="500"
+            >
+              <img
+                src="assets/img/clients/Yunkui.png"
                 class="img-fluid"
                 alt=""
               />
