--- a/index.html
+++ b/index.html
@@ -1146,7 +1146,7 @@
               ></a>
               <div id="faq4" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Si, tambien podras obtener las W - Engines, que son las armas que pueden usar los personajes, cada una tiene sus propias características y su elemento.
+                  Si, tambien podras obtener las W - Engines, que son las armas que usan los personajes, cada una tiene sus propias características y su elemento.
                 </p>
               </div>
             </li>
