--- a/index.html
+++ b/index.html
@@ -1034,14 +1034,14 @@
       </section>
       <!-- End Team Section -->
 
-      <!-- ======= Pricing Section ======= -->
+       <!-- ======= Pricing Section ======= -->
       <section id="pricing" class="pricing section-bg">
         <div class="container">
           <div class="section-title" data-aos="fade-up">
-            <h2>Paquetes promocionales</h2>
+            <h2>Pricing</h2>
             <p>
               Elige entre distintos paquetes especiales que otorgan ventajas
-              únicas para tus misiones en las Cavidades.
+              únicas para tus misiones en las cavidades.
             </p>
           </div>
 
@@ -1049,52 +1049,53 @@
             <div class="col-lg-4 col-md-6">
               <div class="box" data-aos="zoom-in" data-aos-delay="100">
                 <h3>SUSCRIPCION PROXY</h3>
-                <h4><sup>$</sup>5<span> / month</span></h4>
+                <h4><sup>€</sup>5<span> / mensual</span></h4>
                 <ul>
+                  <span class="recommended-badge">Recommended</span>
                   <li>Obten las siguientes recompensas:</li>
-                  <li>300 Monochromes</li>
+                  <li>300 Fotogramas</li>
                   <li>Durante los siguientes 30 dias, tambien obtendras:</li>
-                  <li>90 Polichromes<br></li>
-                  <li>300 Prioridad en servidores completos</li>
+                  <li>90 Peliculas<br></li>
+                  <li>Prioridad en servidores completos</li>
                   <li class="na">limitador de obtencion de monedas</li>
                 </ul>
                 <div class="btn-wrap">
-                  <a href="#" class="btn-buy">Buy Now</a>
+                  <a href="#" class="btn-buy">COMPRA AHORA</a>
                 </div>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6 mt-4 mt-md-0">
               <div class="box recommended" data-aos="zoom-in">
-                <span class="recommended-badge">Recommended</span>
-                <h3>Paquete Invitacion exclusiva</h3>
-                <h4><sup>$</sup>19<span> / month</span></h4>
+                <h3>PAQUETE DE INVITACION EXCLUSIVA</h3>
+                <h4><sup>€</sup>16<span></span></h4>
                 <ul>
-                  <li>Aida dere</li>
-                  <li>Nec feugiat nisl</li>
-                  <li>Nulla at volutpat dola</li>
-                  <li>Pharetra massa</li>
-                  <li class="na">Massa ultricies mi</li>
+                  <li>Obten las siguientes recompensas:</li>
+                  <li>10 Cintas Cifradas</li>
+                  <li>100000 Deniques</li>
+                  <li>1 W - Engine</li>
+                  <li class="na">limitador de obtencion de monedas</li>
                 </ul>
                 <div class="btn-wrap">
-                  <a href="#" class="btn-buy">Buy Now</a>
+                  <a href="#" class="btn-buy">COMPRA AHORA</a>
                 </div>
               </div>
             </div>
 
             <div class="col-lg-4 col-md-6 mt-4 mt-lg-0">
               <div class="box" data-aos="zoom-in" data-aos-delay="100">
-                <h3>Developer</h3>
-                <h4><sup>$</sup>29<span> / month</span></h4>
+                <span class="recommended-badge">Recommended</span>
+                <h3>CUPON SORPRESA</h3>
+                <h4><sup>€</sup>4<span> / semanal</span></h4>
                 <ul>
-                  <li>Aida dere</li>
-                  <li>Nec feugiat nisl</li>
-                  <li>Nulla at volutpat dola</li>
+                  <li>Obten las siguientes recompensas:</li>
+                  <li>240 Fotogramas</li>
+                  <li>760 Peliculas</li>
                   <li>Pharetra massa</li>
-                  <li>Massa ultricies mi</li>
+                  <li class="na">limitador de obtencion de monedas</li>
                 </ul>
                 <div class="btn-wrap">
-                  <a href="#" class="btn-buy">Buy Now</a>
+                  <a href="#" class="btn-buy">COMPRA AHORA</a>
                 </div>
               </div>
             </div>
