--- a/index.html
+++ b/index.html
@@ -1214,10 +1214,9 @@
       <section id="contact" class="contact section-bg">
         <div class="container">
           <div class="section-title">
-            <h2>Contact</h2>
+            <h2>CONTACT</h2>
             <p>
-              Magnam dolores commodi suscipit eius consequatur ex aliquid fuga
-              eum quidem
+              Si tienes alguna duda mas o quieres comentarnos algo, introducelo aqui!
             </p>
           </div>
 
@@ -1236,13 +1235,13 @@
                 <div class="email">
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@example.com</p>
+                  <p>zzz@gmail.com</p>
                 </div>
 
                 <div class="phone">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p>+1 5589 55488 55s</p>
+                  <p>+48 123 123 69</p>
                 </div>
               </div>
             </div>
@@ -1300,11 +1299,11 @@
                   <div class="loading">Loading</div>
                   <div class="error-message"></div>
                   <div class="sent-message">
-                    Your message has been sent. Thank you!
+                    Se ha enviado tu mensaje, Gracias!
                   </div>
                 </div>
                 <div class="text-center">
-                  <button type="submit">Send Message</button>
+                  <button type="submit">Enviar mensaje</button>
                 </div>
               </form>
             </div>
