--- a/index.html
+++ b/index.html
@@ -1034,6 +1034,28 @@
       </section>
       <!-- End Team Section -->
 
+      <!-- ======= Team table Section ======= -->
+      <table>
+        <thead>
+        <tr>
+          <th>Nombre</th>
+          <th>Elemento</th>
+          <th>Rol</th>
+          <th>Calidad</th>
+        </tr>
+        </thead>
+      <tbody>
+        <tr>
+          <td>Evelyn</td>
+          <td>Fuego</td>
+          <td>Atacante</td>
+          <td>S</td>
+        </tr>
+      </tbody>
+    </table>
+      <!-- End Team Table Section -->
+
+
        <!-- ======= Pricing Section ======= -->
       <section id="pricing" class="pricing section-bg">
         <div class="container">
