--- a/index.html
+++ b/index.html
@@ -1031,30 +1031,39 @@
             </div>
           </div>
         </div>
-      </section>
-      <!-- End Team Section -->
 
-      <!-- ======= Team table Section ======= -->
-      <table>
+        <table class="center-table">
         <thead>
         <tr>
-          <th>Nombre</th>
-          <th>Elemento</th>
-          <th>Rol</th>
-          <th>Calidad</th>
+          <th>Nombre </th>
+          <th>Elemento </th>
+          <th>Rol </th>
+          <th>Rango</th>
         </tr>
         </thead>
       <tbody>
         <tr>
-          <td>Evelyn</td>
-          <td>Fuego</td>
+          <td>Nicole</td>
+          <td>Etereo</td>
+          <td>Auxiliar</td>
+          <td>A</td>
+        </tr>
+        <tr>
+          <td>Billy</td>
+          <td>Fisico</td>
           <td>Atacante</td>
-          <td>S</td>
+          <td>A</td>
+        </tr><tr>
+          <td>Anby</td>
+          <td>Eléctrico</td>
+          <td>Aturdidor</td>
+          <td>A</td>
         </tr>
       </tbody>
     </table>
-      <!-- End Team Table Section -->
 
+      </section>
+      <!-- End Team Section -->
 
        <!-- ======= Pricing Section ======= -->
       <section id="pricing" class="pricing section-bg">
