--- a/index.html
+++ b/index.html
@@ -1032,7 +1032,7 @@
           </div>
         </div>
 
-        <table class="center-table">
+        <table class="center-tablet1">
         <thead>
         <tr>
           <th>Nombre </th>
@@ -1237,7 +1237,59 @@
               </div>
             </li>
           </ul>
+          <br>
+        <h2 class="centrado">Guias de ayuda</h2>
+        <h4 class="centrado">Creadores de contenido del juego recomendados por la plataforma</h4>
+
+          <br>
+        <table class="center-tablet2">
+          <thead>
+            <tr>
+              <th>Nombre</th>
+              <th>País</th>
+              <th>YouTube</th>
+              <th>Twitch</th>
+              <th>Instagram</th>
+              <th>Contenido de guías</th>
+            </tr>
+            </thead>
+          <tbody>
+            <tr>
+              <td>Putupau</td>
+              <td>España</td>
+              <td><a href="https://www.youtube.com/@PutupauFamily69" target="_blank">PutupauFamily69</a></td>
+              <td><a href="https://twitch.tv/putupau" target="_blank">Putupau</a></td>
+              <td><a href="https://instagram.com/putupau_official" target="_blank">putupau_official</a></td>
+              <td>Personajes</td>
+            </tr>
+            <tr>
+              <td>Anddriuu</td>
+              <td>Mexico</td>
+              <td><a href="https://www.youtube.com/@anddriuu" target="_blank">anddriuu</a></td>
+              <td><a href="https://twitch.tv/anddriuu" target="_blank">anddriuu</a></td>
+              <td><a href="https://instagram.com/anddriuu__" target="_blank">anddriuu__</a></td>
+              <td>Materiales</td>
+            </tr>
+            <tr>
+              <td>JShoea</td>
+              <td>USA</td>
+              <td><a href="https://www.youtube.com/@jshoea" target="_blank">Jshoea</a></td>
+              <td><a href="https://www.twitch.tv/jshoea" target="_blank">jshoea</a></td>
+              <td><a href="https://www.instagram.com/jshoea/" target="_blank">jshoea</a></td>
+              <td>Coleccionables</td>
+            </tr>
+            <tr>
+              <td>Legionzgaming</td>
+              <td>USA</td>
+              <td><a href="https://www.youtube.com/@LegionzGaming91" target="_blank">LegionzGaming91</a></td>
+              <td><a href="https://www.twitch.tv/legionzgaming" target="_blank">legionzgaming</a></td>
+              <td><a href="https://www.instagram.com/legionzgaming1/" target="_blank">legionzgaming1</a></td>
+            <td>Lore</td>
+            </tr>
+          </tbody>
+        </table>
         </div>
+
       </section>
       <!-- End Frequently Asked Questions Section -->
 
