--- a/index.html
+++ b/index.html
@@ -1238,7 +1238,7 @@
             </li>
           </ul>
           <br>
-        <h2 class="centrado">Guias de ayuda</h2>
+        <h2 class="centradonegro">Guias de ayuda</h2>
         <h4 class="centrado">Creadores de contenido del juego recomendados por la plataforma</h4>
 
           <br>
