--- a/index.html
+++ b/index.html
@@ -1384,105 +1384,40 @@
       <!-- End Frequently Asked Questions Section -->
 
       <!-- ======= Contact Section ======= -->
-      <section id="contact" class="contact section-bg">
+
+      <section id="contact" class="download-section">
         <div class="container">
           <div class="section-title">
-            <h2>CONTACT</h2>
-            <p>
-              Si tienes alguna duda mas o quieres comentarnos algo, introducelo aqui!
-            </p>
+            <h2>DESCARGA EL JUEGO</h2>
+            <p>Haz click en el botón para descargar el juego!</p>
+            <a href="https://hoyoplay.hoyoverse.com/" target="_blank">
+              <button class="download-btn1">Descarga aquí</button>
+            </a>
           </div>
 
-          <div class="row">
-            <div class="col-lg-4">
-              <div
-                class="info d-flex flex-column justify-content-center"
-                data-aos="fade-right"
-              >
-                <div class="address">
-                  <i class="bi bi-geo-alt"></i>
-                  <h4>Location:</h4>
-                  <p>A108 Adam Street,<br />New York, NY 535022</p>
-                </div>
-
-                <div class="email">
-                  <i class="bi bi-envelope"></i>
-                  <h4>Email:</h4>
-                  <p>zzz@gmail.com</p>
-                </div>
-
-                <div class="phone">
-                  <i class="bi bi-phone"></i>
-                  <h4>Call:</h4>
-                  <p>+48 123 123 69</p>
-                </div>
-              </div>
+          <div class="info-container1">
+            <div class="info-box">
+              <i class="bi bi-geo-alt"></i>
+              <h4>Location:</h4>
+              <p>Shanghai,<br />China</p>
             </div>
 
-            <div class="col-lg-8 mt-5 mt-lg-0">
-              <form
-                action="forms/contact.php"
-                method="post"
-                role="form"
-                class="php-email-form"
-                data-aos="fade-left"
-              >
-                <div class="row">
-                  <div class="col-md-6 form-group">
-                    <input
-                      type="text"
-                      name="name"
-                      class="form-control"
-                      id="name"
-                      placeholder="Your Name"
-                      required
-                    />
-                  </div>
-                  <div class="col-md-6 form-group mt-3 mt-md-0">
-                    <input
-                      type="email"
-                      class="form-control"
-                      name="email"
-                      id="email"
-                      placeholder="Your Email"
-                      required
-                    />
-                  </div>
-                </div>
-                <div class="form-group mt-3">
-                  <input
-                    type="text"
-                    class="form-control"
-                    name="subject"
-                    id="subject"
-                    placeholder="Subject"
-                    required
-                  />
-                </div>
-                <div class="form-group mt-3">
-                  <textarea
-                    class="form-control"
-                    name="message"
-                    rows="5"
-                    placeholder="Message"
-                    required
-                  ></textarea>
-                </div>
-                <div class="my-3">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">
-                    Se ha enviado tu mensaje, Gracias!
-                  </div>
-                </div>
-                <div class="text-center">
-                  <button type="submit">Enviar mensaje</button>
-                </div>
-              </form>
+            <div class="info-box1">
+              <i class="bi bi-envelope"></i>
+              <h4>Email:</h4>
+              <p>zzz@gmail.com</p>
+            </div>
+
+            <div class="info-box1">
+              <i class="bi bi-phone"></i>
+              <h4>Call:</h4>
+              <p>+48 123 123 69</p>
             </div>
           </div>
         </div>
       </section>
+
+
       <!-- End Contact Section -->
     </main>
     <!-- End #main -->
@@ -1498,18 +1433,6 @@
               /></a>
               <h3>Zenless Zone Zero</h3>
               <p>Tu aventura en Nueva Eridu te espera.</p>
-            </div>
-          </div>
-
-          <div class="row footer-newsletter justify-content-center">
-            <div class="col-lg-6">
-              <form action="" method="post">
-                <input
-                  type="email"
-                  name="email"
-                  placeholder="Enter your Email"
-                /><input type="submit" value="Subscribe" />
-              </form>
             </div>
           </div>
 
