--- a/index.html
+++ b/index.html
@@ -92,10 +92,10 @@
       btn.addEventListener('click', () => {
         if (music.paused) {
         music.play();
-        btn.textContent = 'Pausar música';
+        btn.textContent = 'Pausar musica';
       } else {
         music.pause();
-        btn.textContent = 'Reproducir música';
+        btn.textContent = 'Reproducir musica';
       }
     });
 </script>
