--- a/index.html
+++ b/index.html
@@ -1421,7 +1421,7 @@
           <div class="info-container1">
             <div class="info-box">
               <i class="bi bi-geo-alt"></i>
-              <h4>Location:</h4>
+              <h4><a href="mapa.html" target="_blank">Location</a>:</h4>
               <p>Shanghai,<br />China</p>
             </div>
 
