--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
                       title="Gameplay de misiones de Proxy"
                       ><i class="bx bx-plus"></i
                     ></a>
-                    <a href="portfolio-details.html" title="More Details"
+                    <a href="https://zenless-zone-zero.fandom.com/es/wiki/Wiki_Zenless_Zone_Zero" title="More Details"
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
@@ -531,7 +531,7 @@
                       title="La interfaz para subir de nivel a tus personajes"
                       ><i class="bx bx-plus"></i
                     ></a>
-                    <a href="portfolio-details.html" title="More Details"
+                    <a href="https://zenless-zone-zero.fandom.com/es/wiki/Wiki_Zenless_Zone_Zero" title="More Details"
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
@@ -557,7 +557,7 @@
                       title="Defensa de objetivos que recopilan información"
                       ><i class="bx bx-plus"></i
                     ></a>
-                    <a href="portfolio-details.html" title="More Details"
+                    <a href="https://zenless-zone-zero.fandom.com/es/wiki/Wiki_Zenless_Zone_Zero" title="More Details"
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
@@ -583,7 +583,7 @@
                       title="Corin Wickes, empleada de Servicios Domésticos Victoria"
                       ><i class="bx bx-plus"></i
                     ></a>
-                    <a href="portfolio-details.html" title="More Details"
+                    <a href="https://zenless-zone-zero.fandom.com/es/wiki/Corin_Wickes" title="More Details"
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
@@ -609,7 +609,7 @@
                       title="Interfaz para mejorar o cambiar los Amplificadores (W-Engines) de los agentes"
                       ><i class="bx bx-plus"></i
                     ></a>
-                    <a href="portfolio-details.html" title="More Details"
+                    <a href="https://zenless-zone-zero.fandom.com/es/wiki/Wiki_Zenless_Zone_Zero" title="More Details"
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
@@ -635,7 +635,7 @@
                       title="Gameplay de Hoshimi Miyabi, de la Divisón 6"
                       ><i class="bx bx-plus"></i
                     ></a>
-                    <a href="portfolio-details.html" title="More Details"
+                    <a href="https://zenless-zone-zero.fandom.com/es/wiki/Wiki_Zenless_Zone_Zero" title="More Details"
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
@@ -661,7 +661,7 @@
                       title="Burnice White, miembro de los Hijos de Calidón"
                       ><i class="bx bx-plus"></i
                     ></a>
-                    <a href="portfolio-details.html" title="More Details"
+                    <a href="https://zenless-zone-zero.fandom.com/es/wiki/Wiki_Zenless_Zone_Zero" title="More Details"
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
@@ -687,7 +687,7 @@
                       title="Jane Doe, miembro de operaciones en cubierto de New Eridu Public Security (N.E.P.S)"
                       ><i class="bx bx-plus"></i
                     ></a>
-                    <a href="portfolio-details.html" title="More Details"
+                    <a href="https://zenless-zone-zero.fandom.com/es/wiki/Wiki_Zenless_Zone_Zero" title="More Details"
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
@@ -713,7 +713,7 @@
                       title="La interfaz de batalla que hay durante las misiones"
                       ><i class="bx bx-plus"></i
                     ></a>
-                    <a href="portfolio-details.html" title="More Details"
+                    <a href="https://zenless-zone-zero.fandom.com/es/wiki/Wiki_Zenless_Zone_Zero" title="More Details"
                       ><i class="bx bx-link"></i
                     ></a>
                   </div>
